--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 body {
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 @tailwind base;
 @tailwind components;
