--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 body {
   font-family: 'Work Sans', sans-serif;
 }
+
+select,
+option {
+  -webkit-appearance: none;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
