feat: implemented onChange handlers and submiting form

--- a/components/ui/Button/Button.module.css
+++ b/components/ui/Button/Button.module.css
@@ -20,7 +20,7 @@
     @apply bg-red-100;
   }
   .loading {
-    @apply text-blue-300 cursor-not-allowed;
+    @apply text-white cursor-not-allowed;
   }
 
   .slim {
